...
                  verticalArrangement = Arrangement.spacedBy(16.dp)) {
                    CustomTextField(
                        value = name,
                        onValueChange = { name = it },
                        title = "Exercise Plan Name",
                        placeholder = "Enter a name for your exercise plan",
                        modifier = Modifier.testTag("nameTextField"))

                    CustomTextField(
                        value = description,
                        onValueChange = { description = it },
                        title = "Description",
                        placeholder = "Enter the description of your exercise plan",
                        modifier = Modifier.testTag("descriptionTextField"))

                    DateTimePicker(
                        selectedDateTime = selectedDateTime,
                        onDateTimeSelected = { newDateTime ->
                          selectedDateTime = newDateTime // Mise à jour avec la date sélectionnée
                        },
...
                        text = "Next",
                        modifier =
                            Modifier.width(Dimensions.ButtonWidth)
                                .height(Dimensions.ButtonHeight)
                                .align(Alignment.CenterHorizontally)
                                .background(brush = BlueGradient, shape = LeafShape)
                                .testTag("nextButton"))
                  }
            }
          } else {
            LazyColumn(
                modifier =
                    Modifier.fillMaxSize()
...
                  }
                  exerciseListItems(
                      exerciseList,
                      onCardClick = { exercise ->
                        showExerciseDialog = true
                        selectedExercise = exercise
                        selectedExerciseType = exercise.type
                        exerciseDetail = exercise.detail
                      },
                      onDetailClick = {})

                  item {
                    // Vertical line connecting the cards
...
                          Box(
                              contentAlignment = Alignment.Center,
                              modifier =
                                  Modifier.fillMaxWidth()
                                      .height(56.dp)
                                      .clickable { showExerciseDialog = true }
                                      .testTag("addExerciseButton")) {
                                Text(
                                    text = stringResource(id = R.string.addButton),
                                    fontSize = 24.sp,
                                    color = Color.DarkGray)
                              }
                        }
...
                          if (editing) {
                            navigationActions.goBack()
                          } else {
                            navigationActions.navigateTo(Screen.MAIN)
                          }
                        },
                        "saveButton")
                  }
                  item {
                    Spacer(modifier = Modifier.height(Dimensions.ExtraLargePadding))
                    // Delete button
                    if (editing) {
                      Button(
...
                          contentPadding = PaddingValues(),
                          modifier =
                              Modifier.width(Dimensions.ButtonWidth)
                                  .height(Dimensions.ButtonHeight)
                                  .padding(Dimensions.LargePadding)
                                  .background(brush = RedGradient, shape = LeafShape)
                                  .testTag("deleteButton")) {
                            Box(
                                modifier = Modifier.fillMaxSize(),
                                contentAlignment = Alignment.Center) {
                                  Row(verticalAlignment = Alignment.CenterVertically) {
                                    Icon(
                                        imageVector = Icons.Default.Delete,
...
        },
        title = { Text("Add Exercise", fontWeight = FontWeight.Bold) },
        text = {
          Column {
            Button(
                onClick = { isDropdownExpanded = true },
                modifier = Modifier.testTag("selectExerciseTypeButton")) {
                  Text("Select Exercise Type")
                }
            DropdownMenu(
                expanded = isDropdownExpanded, onDismissRequest = { isDropdownExpanded = false }) {
                  when (workoutType) {
                    WorkoutType.YOGA -> {
...
                        val newValue = it.toIntOrNull()
                        exerciseDetail =
                            (exerciseDetail as ExerciseDetail.TimeBased).copy(
                                durationInSeconds = newValue ?: 0)
                      },
                      label = { Text("Duration (seconds)") },
                      modifier = Modifier.testTag("durationTextField"))
                  // nb of sets
                  OutlinedTextField(
                      value =
                          if ((exerciseDetail as ExerciseDetail.TimeBased).sets.toString() == "0")
                              ""
                          else (exerciseDetail as ExerciseDetail.TimeBased).sets.toString(),
                      onValueChange = {
                        val newValue = it.toIntOrNull()
                        exerciseDetail =
                            (exerciseDetail as ExerciseDetail.TimeBased).copy(sets = newValue ?: 0)
                      },
                      label = { Text("Sets") },
                      modifier = Modifier.testTag("setsTextField"))
                }
                is ExerciseDetail.RepetitionBased -> {
                  OutlinedTextField(
                      value =
                          if ((exerciseDetail as ExerciseDetail.RepetitionBased)
                              .repetitions
...
                                  .toString(),
                      onValueChange = {
                        val newValue = it.toIntOrNull()
                        exerciseDetail = ExerciseDetail.RepetitionBased(repetitions = newValue ?: 0)
                      },
                      label = { Text("Repetitions") },
                      modifier = Modifier.testTag("repetitionsTextField"))
                }
                else -> {}
              }
            }
          }
        },
...
                  showExerciseDialog = false
                  selectedExercise = null
                  selectedExerciseType = null
                  exerciseDetail = null
                }
              },
              modifier = Modifier.testTag("addExerciseConfirmButton")) {
                if (selectedExercise != null) {
                  Text("Update")
                } else {
                  Text("Add")
                }
              }
...
