...
@Composable
fun CoachFeedbackScreen(navigationActions: NavigationActions, cameraViewModel: CameraViewModel) {
  var showInfoDialogue by remember { mutableStateOf(false) }
  Scaffold(
      modifier = Modifier.testTag("coachFeedBackScreen"),
      topBar = {
        TopBar(title = R.string.coach_feedback_title, navigationActions = navigationActions)
      },
      content = { pd ->
        if (showInfoDialogue) {
          NoteInfoDialogue(
              onDismiss = { showInfoDialogue = false }, modifier = Modifier.testTag("infoDialogue"))
        }
...
              Card(
                  colors = CardDefaults.cardColors(containerColor = BlueWorkoutCard),
                  shape = LeafShape,
                  modifier =
                      Modifier.padding(18.dp)
                          .shadow(8.dp, shape = LeafShape)
                          .testTag("exerciseCard")) {
                    Column(
                        modifier = Modifier.padding(16.dp),
                        verticalArrangement = Arrangement.Center,
                        horizontalAlignment = Alignment.CenterHorizontally) {
                          Text(
                              text = exerciseString,
...
